--- a/main.css
+++ b/main.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.header{
+    background:url(./assest/foundation-bottles-advertising-4-1.jpg);
+    background-size: cover;
+    background-position: center;
+}
