--- a/main.css
+++ b/main.css
@@ -19,3 +19,9 @@
     background-size: cover;
     background-color: rgba(255, 255, 255, 0.747);
 }
+#subBtn:hover{
+    background-image: linear-gradient(#D97072,#6F3C5C);
+    color: white;
+    outline: none;
+    transition: all 0.5s;
+}
